--- a/AdSanare.Core/Views/Ingreso/Index.cshtml
+++ b/AdSanare.Core/Views/Ingreso/Index.cshtml
@@ -74,6 +74,7 @@
                         <a href="#" onclick="VerIngreso(@p.Id)" data-toggle="modal" data-target="#detalle" title="Ver Ingreso" class="btn btn-info btn-xs"><i class="fa fa-search"></i></a>
                         <a href="@Url.Action("Edit", "Ingreso", new { id = p.Id})" title="Editar Ingreso" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>
                         <a href="@Url.Action("Delete", "Ingreso", new { id = p.Id })" title="Borrar Ingreso" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
+                        <a href="@Url.Action("Pdf", "Evolucion", new { id = p.Id })" title="Generar PDF" class="btn btn-warning btn-xs"><i class="fa fa-file-pdf"></i></a>
                         <a href="#" onclick="VerEvoluciones(@p.Id)" title="Ver Evoluciones" class="btn btn-primary btn-xs"><i class="fa fa-list"></i></a>
                     </td>
                 </tr>
