--- a/AdSanare.Core/Views/Paciente/Create.cshtml
+++ b/AdSanare.Core/Views/Paciente/Create.cshtml
@@ -6,23 +6,19 @@
     </div>
     <form asp-antiforgery="true" asp-action="Create" method="post">
         <div class="card-body">
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="form-group">
+            <div class="form-group">
+                <div class="row col-md-12">
+                    <div class="col-md-5">
                         <label asp-for="Nombre"></label>
                         <input class="form-control" asp-for="Nombre">
                         <span class="text-danger" asp-validation-for="Nombre"></span>
                     </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="form-group">
+                    <div class="col-md-5">
                         <label asp-for="Apellido"></label>
                         <input class="form-control" asp-for="Apellido">
                         <span class="text-danger" asp-validation-for="Apellido"></span>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
+                    <div class="col-md-2">
                         <label asp-for="Documento"></label>
                         <input class="form-control" asp-for="Documento">
                         <span class="text-danger" asp-validation-for="Documento"></span>
